--- a/package.json
+++ b/package.json
@@ -18,15 +18,18 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1",
+    "react-toastify": "^9.0.1",
     "sass": "^1.52.1",
     "sharp": "^0.30.5",
     "snowflake-id-js": "^1.0.1",
+    "socket.io-client": "^4.5.1",
     "tailwind-scrollbar": "^1.3.1"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
+    "@types/sharp": "^0.30.2",
     "autoprefixer": "^10.4.7",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
