--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next-seo": "^5.4.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-dropzone": "^14.2.1",
     "react-icons": "^4.3.1",
     "react-toastify": "^9.0.1",
     "sass": "^1.52.1",
