--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.4.0",
+    "@types/uniqid": "^5.3.2",
     "clsx": "^1.1.1",
     "iron-session": "^6.1.3",
     "mongodb": "^4.6.0",
@@ -24,7 +25,8 @@
     "sharp": "^0.30.5",
     "snowflake-id-js": "^1.0.1",
     "socket.io-client": "^4.5.1",
-    "tailwind-scrollbar": "^1.3.1"
+    "tailwind-scrollbar": "^1.3.1",
+    "uniqid": "^5.4.0"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
