--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dropzone": "^14.2.1",
     "react-icons": "^4.3.1",
     "react-toastify": "^9.0.1",
+    "react-tooltip": "^4.2.21",
     "sass": "^1.52.1",
     "sharp": "^0.30.5",
     "snowflake-id-js": "^1.0.1",
