--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "react-dom": "18.1.0",
     "react-dropzone": "^14.2.1",
     "react-icons": "^4.3.1",
+    "react-overlays": "^5.1.2",
     "react-toastify": "^9.0.1",
     "react-tooltip": "^4.2.21",
     "sass": "^1.52.1",
     "sharp": "^0.30.5",
     "snowflake-id-js": "^1.0.1",
     "socket.io-client": "^4.5.1",
+    "styled-components": "^5.3.5",
     "tailwind-scrollbar": "^1.3.1",
     "uniqid": "^5.4.0"
   },
@@ -34,6 +36,7 @@
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
     "@types/sharp": "^0.30.2",
+    "@types/styled-components": "^5.1.25",
     "autoprefixer": "^10.4.7",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
