--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sass": "^1.52.1",
     "sharp": "^0.30.5",
     "snowflake-id-js": "^1.0.1",
+    "socket.io": "^4.5.1",
     "socket.io-client": "^4.5.1",
     "styled-components": "^5.3.5",
     "tailwind-scrollbar": "^1.3.1",
